--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-PORT = 1977
-DB_URI =mongodb+srv://samkallel:mernf12023@cluster0.eb9kvi4.mongodb.net/
-
- 
+PORT = 3310
+DB_URI =mongodb+srv://fs4:fs42024@cluster0.mdbngl7.mongodb.net/
